--- a/OnTheMap/View/Base.lproj/Main.storyboard
+++ b/OnTheMap/View/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Ro7-TR-l3J"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" textContentType="email"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES" smartInsertDeleteType="yes" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="klq-Fc-qOc">
                                         <rect key="frame" x="0.0" y="47" width="350" height="35"/>
@@ -55,9 +55,9 @@
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="PJg-U8-EY9"/>
                                         </constraints>
                                         <attributedString key="attributedText"/>
-                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" smartInsertDeleteType="no" textContentType="password"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMa-5E-npd">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMa-5E-npd" customClass="RoundButton" customModule="OnTheMap" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="94" width="350" height="35"/>
                                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -176,18 +176,23 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="On the Map" id="FPZ-W8-Yma">
-                        <barButtonItem key="leftBarButtonItem" image="exit_logout" id="eLE-Tj-wEn">
+                        <barButtonItem key="leftBarButtonItem" image="power" catalog="system" id="eLE-Tj-wEn">
                             <connections>
                                 <action selector="logoutTapped:" destination="BYZ-38-t0r" id="Cf9-PS-f3b"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
+                            <barButtonItem image="icon_pin" id="E4w-Cg-cwA">
+                                <connections>
+                                    <action selector="postLocationTapped:" destination="BYZ-38-t0r" id="7FO-JS-OLE"/>
+                                    <segue destination="Kz8-IQ-knA" kind="presentation" identifier="addLocation" modalPresentationStyle="fullScreen" id="lbF-ly-zgp"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem image="icon_refresh" id="aOM-TT-b3E">
                                 <connections>
                                     <action selector="reloadMap" destination="BYZ-38-t0r" id="yQS-qk-XeR"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="icon_pin" id="E4w-Cg-cwA"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
@@ -197,6 +202,90 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-26" y="-164"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ghq-nN-awW">
+            <objects>
+                <navigationController id="Kz8-IQ-knA" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OSn-7U-yHO">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="SG6-BC-wfE" kind="relationship" relationship="rootViewController" id="MT4-G2-iLL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XSt-FA-dxV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="746" y="115"/>
+        </scene>
+        <!--Add Location-->
+        <scene sceneID="qwV-7J-rfb">
+            <objects>
+                <viewController id="SG6-BC-wfE" customClass="PostLocationViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="r1D-8X-lSO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="yUM-yZ-Os2">
+                                <rect key="frame" x="181" y="312.5" width="52" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="34S-XN-8gr"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="CuC-PJ-e9K">
+                                <rect key="frame" x="32" y="412.5" width="350" height="125"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d7a-Om-Cmw">
+                                        <rect key="frame" x="0.0" y="0.0" width="350" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" textContentType="location"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Media URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R8G-OL-a4p">
+                                        <rect key="frame" x="0.0" y="46" width="350" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="yes" keyboardType="URL" textContentType="url"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eG7-vu-vvO" customClass="RoundButton" customModule="OnTheMap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="350" height="33"/>
+                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <state key="normal" title="Find Location">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="findLocationTapped" destination="SG6-BC-wfE" eventType="touchUpInside" id="UTL-vc-dLK"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="yUM-yZ-Os2" firstAttribute="top" secondItem="CuC-PJ-e9K" secondAttribute="top" constant="-100" id="3yf-cw-dUY"/>
+                            <constraint firstItem="CuC-PJ-e9K" firstAttribute="trailing" secondItem="MBn-OA-XXT" secondAttribute="trailing" constant="-32" id="9wy-Xs-DSh"/>
+                            <constraint firstItem="CuC-PJ-e9K" firstAttribute="centerY" secondItem="MBn-OA-XXT" secondAttribute="centerY" id="QOk-pl-XRV"/>
+                            <constraint firstItem="yUM-yZ-Os2" firstAttribute="centerX" secondItem="MBn-OA-XXT" secondAttribute="centerX" id="bhb-p8-vFm"/>
+                            <constraint firstItem="CuC-PJ-e9K" firstAttribute="leading" secondItem="MBn-OA-XXT" secondAttribute="leading" constant="32" id="wGy-6S-QM5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="MBn-OA-XXT"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Location" id="sfD-XI-rBW">
+                        <barButtonItem key="leftBarButtonItem" image="arrowshape.turn.up.left" catalog="system" id="7NS-Nt-lQI">
+                            <connections>
+                                <action selector="cancelActionTapped" destination="SG6-BC-wfE" id="IJa-AM-Lot"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="findLocationButton" destination="eG7-vu-vvO" id="xrN-eo-qF2"/>
+                        <outlet property="locationTextfield" destination="d7a-Om-Cmw" id="30j-1O-RDe"/>
+                        <outlet property="mediaURLTextfield" destination="R8G-OL-a4p" id="NJh-k7-bSc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bwi-yr-qqD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1580" y="115"/>
         </scene>
         <!--On the Map-->
         <scene sceneID="aH4-Ke-9xS">
@@ -222,18 +311,23 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="On the Map" id="emW-Py-Mlp">
-                        <barButtonItem key="leftBarButtonItem" image="exit_logout" id="Pva-ps-G6Y">
+                        <barButtonItem key="leftBarButtonItem" image="power" catalog="system" id="Pva-ps-G6Y">
                             <connections>
                                 <action selector="logoutTapped:" destination="mBM-iZ-gGi" id="xwN-QF-la7"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
+                            <barButtonItem image="icon_pin" id="G70-9h-5JM">
+                                <connections>
+                                    <action selector="postLocationTapped:" destination="mBM-iZ-gGi" id="STf-ce-Svs"/>
+                                    <segue destination="Kz8-IQ-knA" kind="presentation" identifier="addLocation" modalPresentationStyle="fullScreen" id="EKi-sL-ZOf"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem image="icon_refresh" id="gVx-jO-8jl">
                                 <connections>
                                     <action selector="reloadInfo" destination="mBM-iZ-gGi" id="ufa-8F-66h"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="icon_pin" id="G70-9h-5JM"/>
                         </rightBarButtonItems>
                     </navigationItem>
                 </tableViewController>
@@ -243,11 +337,16 @@
         </scene>
     </scenes>
     <resources>
-        <image name="exit_logout" width="32" height="32"/>
+        <image name="arrowshape.turn.up.left" catalog="system" width="64" height="52"/>
         <image name="icon_listview-deselected" width="75" height="50"/>
         <image name="icon_mapview-deselected" width="75" height="50"/>
         <image name="icon_pin" width="24" height="24"/>
         <image name="icon_refresh" width="24" height="24"/>
+        <image name="icon_world" width="52" height="67"/>
         <image name="logo-u" width="62" height="62"/>
+        <image name="power" catalog="system" width="64" height="62"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="EKi-sL-ZOf"/>
+    </inferredMetricsTieBreakers>
 </document>
